--- a/.gitconfig
+++ b/.gitconfig
@@ -3,7 +3,8 @@
 		git branch -vv | cut -c 3- | awk '$3 !~/\\[/ { print \" \",$1 }' && \
 		echo "" && \
 		echo "Orphaned Local Branches:" && \
-		git branch -vv | cut -c 3- | grep ': gone]' | awk '{ print \" \",$1 }' && echo "" && \
+		git branch -vv | cut -c 3- | grep ': gone]' | awk '{ print \" \",$1 }' && \
+		echo "" && \
 		echo "Merged into master:" && \
 		git branch --merged master | awk '!/master/ { print \" \",$1 }'
 	emails = !git shortlog -s -e | awk -F '<' '{ print $2 }' | awk -F '>' '{ print tolower($1) }' | uniq | sort
